Digital participation site finishing touches

--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
             <h1>Skill Up Scotland</h1>
             <p>
                 When you sign Scotland's Digital Participation Charter, we ask you
@@ -9,7 +9,7 @@
             </p>
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-4-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner description pledges">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
             <h1 class="align-bottom">Our Pledges</h1>
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -36,12 +36,12 @@
                 <span class="number">1</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
             <h3>
                 Skill Up
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 We ensure that our staff &amp; volunteers have the opportunity
                 to develop basic digital skills.
@@ -57,12 +57,12 @@
                 <span class="number">2</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
             <h3>
                 Support Staff
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 We support our staff &amp; volunteers to help others learn basic
                 digital skills and embrace digital tools.
@@ -78,12 +78,12 @@
                 <span class="number">3</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
             <h3>
                 Support Scotland
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 We support our nation by contributing resources and practical
                 support for Scotland in whatever ways we can.
@@ -99,12 +99,12 @@
                 <span class="number">4</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
             <h3>
                 Back the Basics
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 We support a common language based on digital participation and
                 basic digital skills to make our thinking and actions as clear
@@ -121,12 +121,12 @@
                 <span class="number">5</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
             <h3>
                 Come Together
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 We channel our efforts through the Digital Participation
                 programme so that our activities are coordinated and build on
