Added search button to human rights signatories

--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -202,6 +202,25 @@ p.quote {
 
     form {
         margin-bottom: $spacing-unit*2;
+        .mdc-textfield {
+            position: relative;
+            margin-right: $spacing-unit/2;
+            .mdc-textfield__input {
+                margin-right: 1rem;
+                box-sizing: border-box;
+                padding: 0 $spacing-unit*2.5 0 $spacing-unit/2;
+                width: 100%;
+            }
+            .search-button-large {
+                padding: 1px 0 0;
+                position: absolute;
+                top: $spacing-unit/2;
+                right: $spacing-unit/2;
+                .fa-search {
+                    color: #333;
+                }
+            }
+        }
     }
     // h1 {
     //     font-size: 5.3rem;
