--- a/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
@@ -8,7 +8,9 @@
                     <h4>Search</h4>
                     <div class="mdc-textfield mdc-textfield--upgraded keywords" data-mdc-auto-init="MDCTextField">
                         <input type="text" class="mdc-textfield__input" name="q" id="keywords" value="{{params.query.q}}" placeholder="Search for a declaration signatory">
-                        <div class="mdc-textfield__bottom-line"></div>
+                        <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                            <span class="far fa-2x fa-search" aria-hidden="true"></span>
+                        </button>
                     </div>
                 </div>
             </div>
