Footer styling on human rights site

--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -1054,6 +1054,7 @@ footer {
     a {
         color: white;
         text-decoration: underline;
+        font-weight: 400;
     }
     a:hover {
         color: white;
