--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -83,36 +83,60 @@
             </main>
 
             <footer>
-                <div class="footer">
+                <div class="footer-main">
                     <div class="container-fluid">
-                        <div class="footer-main">
-                            <div class="footer-brand">
-                                <a href="http://scvo.org" class="brand-logo" title="The Scotland Declaration on Human Rights">
-                                    <img src="assets/images/scvo-logo.png" />
-                                </a>
-                                <a href="https://www.equalityhumanrights.com" class="brand-logo" title="Equality Human Rights Scotland">
-                                    <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
-                                </a>
-                                <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
-                                    <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none;height:44px;" />
-                                </a>
-                                <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
-                                    <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" />
-                                </a>
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
+                                    <h3>About</h3>
+                                    <p>
+                                        The <strong>Scotland Declaration on Human Rights</strong> is run by the
+                                        <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
+                                        with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishhumanrights.com">Scottish Human Rights
+                                        Commission</a> and the <a href="https://www.equalityhumanrights.com">Equality and Human Rights Commission</a>
+                                    </p>
+                                    <a href="https://www.equalityhumanrights.com" class="brand-logo" title="Equality Human Rights Scotland">
+                                        <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
+                                    </a>
+                                    <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
+                                        <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none;height:44px;" />
+                                    </a>
+                                    <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
+                                        <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" />
+                                    </a>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Help</h3>
+                                    <ul class="mdc-list">
+                                        <li class="mdc-list-item">
+                                            <a href="/accessibility">Accessibility</a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="footer-copyright">
-                                <p>
-                                    The Scotland Declaration on Human Rights is built and managed by the
-                                    <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                                    with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishhumanrights.com">Scottish Human Rights
-                                    Commission</a> and the <a href="https://www.equalityhumanrights.com">Equality and Human Rights Commission</a>
-                                </p>
-                                <p class="copyright">
-                                    &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations
-                                    (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered
-                                    in Scotland
-                                    <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>.
-                                </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright">
+                    <div class="container-fluid">
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+                                    <p>
+                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                                    </p>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+                                    <a href="http://scvo.org">
+                                        <img src="https://storage.cloud.google.com/digitalparticipation/images/logos/scvo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
