Fixed image links in charter

--- a/functions/test-db/json2/digitalparticipation/templates/home.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/home.hbs
@@ -1,11 +1,11 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img hide-on-med-and-up" />
             <h1>Sign Up &amp; Skill Up for a Digitally Smarter Scotland</h1>
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner description">
@@ -30,13 +30,13 @@
             </p>
             <p>
                 <a href="/sign-up" class="hide-on-med-and-up">
-                    <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+                    <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
                 </a>
             </p>
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
             <a href="/sign-up">
-                <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+                <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
             </a>
         </div>
     </div>
