--- a/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
@@ -43,17 +43,17 @@
 
             <p>Download the resources below to help you promote your commitment to the Charter amongst your staff and stakeholders.</p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Brand-Guidelines-for-Signatories.pdf" download>Brand guidelines</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Brand-Guidelines-for-Signatories.pdf" download>Brand guidelines</a></p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Signatory-Logo-FullColour-RGB.png" download>Charter signatory logo (colour) for use on screens</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Signatory-Logo-FullColour-RGB.png" download>Charter signatory logo (colour) for use on screens</a></p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Signatory-Logo-White-RGB.png" download>Charter signatory logo (white) for use on screens</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Signatory-Logo-White-RGB.png" download>Charter signatory logo (white) for use on screens</a></p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Signatory-Logo-FullColour-CMYK.eps" download>Charter signatory logo (colour) for use in print</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Signatory-Logo-FullColour-CMYK.eps" download>Charter signatory logo (colour) for use in print</a></p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Signatory-Logo-White-CMYK.eps" download>Charter signatory logo (white) for use in print</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Signatory-Logo-White-CMYK.eps" download>Charter signatory logo (white) for use in print</a></p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/Signatory-Logo-Suite.zip" download>Download full logo suite (zipped file)</a></p>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/Signatory-Logo-Suite.zip" download>Download full logo suite (zipped file)</a></p>
 
         </div>
     </div>
@@ -78,13 +78,13 @@
 
             <ul>
                 <li>
-                    <a href="https://storage.cloud.google.com/digitalparticipation/reports/Digital_Exclusion_Briefing_August_2017.pdf" download>Summary briefing paper: what works in tackling digital exclusion</a>
+                    <a href="https://storage.googleapis.com/digitalparticipation/reports/Digital_Exclusion_Briefing_August_2017.pdf" download>Summary briefing paper: what works in tackling digital exclusion</a>
                 </li>
                 <li>
-                    <a href="https://storage.cloud.google.com/digitalparticipation/reports/Tackling_Digital_Exclusion_Literature_Review.pdf" download>Literature review: rapid review of evidence for basic digital skills</a>
+                    <a href="https://storage.googleapis.com/digitalparticipation/reports/Tackling_Digital_Exclusion_Literature_Review.pdf" download>Literature review: rapid review of evidence for basic digital skills</a>
                 </li>
                 <li>
-                    <a href="https://storage.cloud.google.com/digitalparticipation/reports/Charter_Fund_Review_Report.pdf" download>Charter Fund project review: overview of projects from funding rounds 1-3</a>
+                    <a href="https://storage.googleapis.com/digitalparticipation/reports/Charter_Fund_Review_Report.pdf" download>Charter Fund project review: overview of projects from funding rounds 1-3</a>
                 </li>
             </ul>
 
@@ -188,7 +188,7 @@
 
             <p><a href="https://www.goodthingsfoundation.org/research-publications/reboot-uk-interim-findings">Reboot UK Findings</a> - Good Things Foundation (2016)</p>
 
-            <p><a href="https://storage.cloud.google.com/digitalparticipation/reports/StoriesfromtheDigitalDivide-QuarriersworkingwithGCIL2016.pdf" download>Stories from the Digital Divide - Quarriers working with Glasgow Centre for Inclusive Living (2016)</a>
+            <p><a href="https://storage.googleapis.com/digitalparticipation/reports/StoriesfromtheDigitalDivide-QuarriersworkingwithGCIL2016.pdf" download>Stories from the Digital Divide - Quarriers working with Glasgow Centre for Inclusive Living (2016)</a>
 
             <p><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/householdcharacteristics/homeinternetandsocialmediausage/bulletins/internetaccesshouseholdsandindividuals/2016">Internet access in Great Britain: 2016</a> - Office for National Statistics (2016)</p>
 
