--- a/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
@@ -5,13 +5,13 @@
             <p>
                 Joining up is simple. Just sign up using the form below and take a step towards a digitally smarter Scotland. We'll ask you for some details about your organisation (so you'll need to make sure you're authorised to sign on their behalf), then we'll ask what your commitment is going to be. This is something you'll define for yourself: anything your organisation can do to help build basic digital skills, big or small, is important. We won't pass your contact details on to any third parties. Thank you - we really value your support.
             </p>
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img hide-on-med-and-up" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-12-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
@@ -25,7 +25,7 @@
             &nbsp;
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4 mdc-layout-grid__cell-12-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
@@ -41,7 +41,7 @@
             <p>
                 All we ask is that you make a commitment to digital participation. That could mean a plan to skill up your own workforce, an offer you’re making to the wider community, a commitment to building basic digital skills for your tenants, clients or service users, or whatever fits best for your organisation. We’re happy to work with you to find out what might work best. You can see <a href="/stories">case study examples</a> of what some other organisations have done, or you can <a href="/contact-us">contact us</a> for more information.
             </p>
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img hide-on-med-and-up" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr />
