--- a/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
@@ -9,13 +9,13 @@
                 skills is a handy tool to kickstart your thinking on how you might
                 begin to put your digital charter pledges into action.
             </p>
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img hide-on-med-and-up" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
@@ -215,7 +215,7 @@
 
     <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Why-It-Matters-RGB-04.png" alt="Why It Matters? illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Why-It-Matters-RGB-04.png" alt="Why It Matters? illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
