--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -7,10 +7,10 @@
                 to commit to five key pledges - allowing Scotland to work together
                 and skill up our digital nation.
             </p>
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-4-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
@@ -24,7 +24,7 @@
             <h1 class="align-bottom">Our Pledges</h1>
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-3-desktop">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12">
             <hr class="nomargin" />
