--- a/functions/test-db/json2/digitalparticipation/templates/resources.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/resources.hbs
@@ -2,10 +2,10 @@
     <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
             <h1>Resources</h1>
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img hide-on-med-and-up" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img hide-on-med-and-up" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img pull-right" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img pull-right" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner resources">
