--- a/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
@@ -23,19 +23,19 @@
     <div class="mdc-layout-grid__inner expand detail">
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4">
             {{#compare params.slug "===" "managing-information"}}
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Managing-Info).png" alt="Managing Info illustration" class="responsive-img margin-top" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Managing-Info).png" alt="Managing Info illustration" class="responsive-img margin-top" />
             {{else}}
             {{#compare params.slug "===" "communicating"}}
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Communicating).png" alt="Communicating illustration" class="responsive-img margin-top" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Communicating).png" alt="Communicating illustration" class="responsive-img margin-top" />
             {{else}}
             {{#compare params.slug "===" "transacting"}}
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Transacting).png" alt="Transacting illustration" class="responsive-img margin-top" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Transacting).png" alt="Transacting illustration" class="responsive-img margin-top" />
             {{else}}
             {{#compare params.slug "===" "problem-solving"}}
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Problem-Solving).png" alt="Problem Solving illustration" class="responsive-img margin-top" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Problem-Solving).png" alt="Problem Solving illustration" class="responsive-img margin-top" />
             {{else}}
             {{#compare params.slug "===" "creating"}}
-            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Creating illustration" class="responsive-img margin-top" />
+            <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Creating illustration" class="responsive-img margin-top" />
             {{else}}
             {{/compare}}
             {{/compare}}
