--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -42,10 +42,10 @@ secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 funding: (
-primary: #00838F,
-primary-alpha: rgba(0,131,143,0.89),
-primary-light: #008D9B,
-primary-dark: #006064,
+primary: #00796A,
+primary-alpha: rgba(0,121,106,0.89),
+primary-light: #198678,
+primary-dark: #006054,
 secondary: #FF8F00,
 secondary-light: #FFA000,
 secondary-dark: #FF6F00
@@ -539,7 +539,7 @@ primary-dark: #251032
 .breadcrumbs,
 .page-content,
 .page-related,
-.page-sidebar,
+.page-sidebar .static-sidebar,
 .posts-page .page-sidebar,
 .post-content,
 .library-content,
@@ -1379,11 +1379,14 @@ figure {
         bottom: 0;
         right: 0;
         max-width: 50%;
-        font-size: 0.9rem;
         color: rgba(255, 255, 255, 0.8);
         background: rgba(0, 0, 0, 0.65);
         border-radius: $spacing-unit/4 $spacing-unit/4 0 0;
-        padding: $spacing-unit/4 $spacing-unit*(0.4);
+        padding: $spacing-unit/10 $spacing-unit/3 $spacing-unit/4;
+        font-size: 1rem;
+        font-weight: 600;
+        font-variant-caps: all-small-caps;
+        line-height: 1;
         p {
             margin: 0;
         }
