--- a/functions/test-db/json2/scvo/templates/page-cjs.hbs
+++ b/functions/test-db/json2/scvo/templates/page-cjs.hbs
@@ -10,7 +10,7 @@
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar static-sidebar">
                     <h3>About Community Jobs Scotland</h3>
                     <p>
                         Creating jobs in Scotland's third sector for unemployed vulnerable young people.
