Fixed digital events

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -534,6 +534,7 @@ primary-dark: #251032
 .events,
 .search-result.scvo-cms-page,
 .search-result.scvo-event,
+.gist.scvo-event,
 .gist.scvo-cms-post,
 .list.scvo-cms-post,
 .breadcrumbs,
@@ -1495,8 +1496,8 @@ figure {
             text-align: center;
         }
         img {
-            margin: 0 $spacing-unit*3;
-            max-width: 50%;
+            margin: 0;
+            width: 50%;
         }
     }
 }
