--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -80,7 +80,7 @@
                         {{> search_info}}
 
                         {{#each primaryResponse.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
 
                         {{> pagination}}
