--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -25,7 +25,7 @@
                     <h2 class="author">Similar events</h2>
                     <ul class="supplimentary-list">
                         {{#each supplimentaryResponses.related_events.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </ul>
                     {{/compare}}
