--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -195,13 +195,13 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.related_events.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                {{{_source.rendered.mini}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each}}
                         </div>
                     </div>
                     <p>
-                        <a class="mdc-button mdc-button--raised v-margin" href="/events?type=digital">See all</a>
+                        <a class="mdc-button mdc-button--raised v-margin" href="/digital/participation/events">See all</a>
                     </p>
                     {{/compare}}
                 </div>
