New events structure

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1481,6 +1481,9 @@ figure {
             grid-column-end: span 9;
         }
     }
+    .scvo-event {
+        margin-bottom: 0;
+    }
     .logos {
         margin-bottom: $spacing-unit*2;
         .mdc-layout-grid__cell {
