New events system

--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -9,7 +9,7 @@
             <li>{{{title}}}</li>
         </ul>
 
-        {{{rendered.full}}}
+        {{{rendered.scvo_full}}}
 
         {{#compare course_type "===" "Training Course"}}
         <p>
