Digital events fixes

--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -13,7 +13,7 @@
 
         {{#compare course_type "===" "Training Course"}}
         <p>
-            <strong>NB: Please read our <a href="https://cms.scvo.org/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions</a> document below before making your booking.</strong>
+            <strong>NB: Please read our <a href="https://cms.scvo.org/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
         </p>
         {{/compare}}
         {{/with}}
