--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                     <p>
-                        <a class="mdc-button mdc-button--raised v-margin" href="/digital/participation/events">See all</a>
+                        <a class="mdc-button mdc-button--raised v-margin" href="/digital/events">See all</a>
                     </p>
                     {{/compare}}
                 </div>
