--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -541,6 +541,7 @@ primary-dark: #251032
 .page-content,
 .page-related,
 .page-sidebar .static-sidebar,
+.page-sidebar.static-sidebar,
 .posts-page .page-sidebar,
 .post-content,
 .library-content,
@@ -1481,7 +1482,7 @@ figure {
             grid-column-end: span 9;
         }
     }
-    .scvo-event {
+    .gist.scvo-event {
         margin-bottom: 0;
     }
     .logos {
