--- a/functions/test-db/json2/scvo/templates/event-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/event-digital.hbs
@@ -11,6 +11,16 @@
         </ul>
 
         {{{rendered.scvo_full}}}
+
+        {{#compare course_type "===" "Training Course"}}
+        <p>
+            <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
+        </p>
+        {{else}}
+        <p>
+            <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
+        </p>
+        {{/compare}}
         {{/with}}
 
         <div class="mdc-layout-grid">
