--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -47,7 +47,10 @@
                         {{>filter_checkbox label="Member organisations" value="scvo-member"}}
                         {{>filter_checkbox label="Pages" value="scvo-cms-page"}}
                         {{>filter_checkbox label="Staff" value="scvo-staff"}}
-                        {{>filter_checkbox label="Training & events" value="scvo-event"}}
+                        {{>filter_checkbox label="Events" value="scvo-event"}}
+                        {{>filter_checkbox label="Digital events" value="scvo-event-digital"}}
+                        {{>filter_checkbox label="Policy events" value="scvo-event-policy"}}
+                        {{>filter_checkbox label="Training courses" value="scvo-event-training"}}
 
                         <h3>Digital programme</h3>
                         {{>filter_checkbox label="Funded projects" value="scvo-grant-charter"}}
